# pfecs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD
src/: archetype.rs  cell.rs  component.rs  entity.rs  lib.rs  resource.rs  utils.rs
src/storage/: component.rs  join.rs  mod.rs  resource.rs
src/system/: dispatch.rs  executor.rs  mod.rs
src/world/: mod.rs  query.rs
